adding disable feature

--- a/index.html
+++ b/index.html
@@ -95,16 +95,14 @@
                                             <div class="col-6">
                                                 <h5 id="body" class="mb-3">+918472055633</h5>
                                             </div>
-                                            <hr>
                                         </div>
                                         <div class="row my-4">
                                             <div class="ps-md-5 col-6">
                                                 <h5 id="body" class="mb-3">Email Address</h5>
                                             </div>
                                             <div class="col-6">
-                                                <h5 id="body" class="mb-3">contactdimpal001@gmail.com</h5>
+                                                <a class="links" href="mailto:contactdimpal001@gmail.com?subject=Regarding%20your%20website"><h5 id="body" class="links mb-3">Mail to Dimpal</h5></a>
                                             </div>
-                                            <hr>
                                         </div>
                                         <div class="row my-4">
                                             <div class="ps-md-5 col-6">
@@ -115,7 +113,6 @@
                                                         href="https://m.me/dimpal.das.12576"
                                                         target="_blank">Message on Facebook</a></h5>
                                             </div>
-                                            <hr>
                                         </div>
                                         <div class="row my-4">
                                             <div class="ps-md-5 col-6">
@@ -188,9 +185,7 @@
                         <div class="col-md-6">
                             <div class="col-12 my-2 myProjects py-4 text-center rounded shadow">
                                 <h5 class="text-primary">My Profile</h5>
-                                <a href="https://dimpal001.github.io/rpsgame.github.io/" target="_blank">
-                                    <button class="btn btn-primary">Launch Project</button>
-                                </a>
+                                <button class="btn disabled btn-primary">Launch Project</button>
                             </div>
                         </div>
                     </div>
