adding instagram link

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                                             </div>
                                             <div class="col-6">
                                                 <h5 id="body" class="mb-3"><a class="links"
-                                                        href="https://www.instagram.com/m/_im_dimpl/"
+                                                        href="https://ig.me/m/_im_dimpl/"
                                                         target="_blank">Message on Instagram</a></h5>
                                             </div>
                                         </div>
