adding maintenance alert

--- a/index.html
+++ b/index.html
@@ -54,8 +54,10 @@
                 <div class="col-md-6 rounded details-1">
                     <div class="col-12">
                         <h1 class="pt-4 px-4 pb-2 text-center">About me</h1>
-                        <p id="about" class="lead mx-md-5 my-md-4 px-3 pb-3 text-center">I'm Dimpal Das. I'm from a small village of
-                            Assam. Currenty I'm studing B.tech in Information Technology at North Eastern Hill University,
+                        <p id="about" class="lead mx-md-5 my-md-4 px-3 pb-3 text-center">I'm Dimpal Das. I'm from a
+                            small village of
+                            Assam. Currenty I'm studing B.tech in Information Technology at North Eastern Hill
+                            University,
                             Shillong. I'm working as web developer. I have developed some static Website.</p>
                         <div class="text-center m-3 my-md-4">
                             <a href="#about-me" id="contact-me-btn" class="btn rounded-pill">CONTACT ME</a>
@@ -101,7 +103,10 @@
                                                 <h5 id="body" class="mb-3">Email Address</h5>
                                             </div>
                                             <div class="col-6">
-                                                <a class="links" href="mailto:contactdimpal001@gmail.com?subject=Regarding%20your%20website"><h5 id="body" class="links mb-3">Mail to Dimpal</h5></a>
+                                                <a class="links"
+                                                    href="mailto:contactdimpal001@gmail.com?subject=Regarding%20your%20website">
+                                                    <h5 id="body" class="links mb-3">Mail to Dimpal</h5>
+                                                </a>
                                             </div>
                                         </div>
                                         <div class="row my-4">
@@ -110,8 +115,8 @@
                                             </div>
                                             <div class="col-6">
                                                 <h5 id="body" class="mb-3"><a class="links"
-                                                        href="https://m.me/dimpal.das.12576"
-                                                        target="_blank">Message on Facebook</a></h5>
+                                                        href="https://m.me/dimpal.das.12576" target="_blank">Message on
+                                                        Facebook</a></h5>
                                             </div>
                                         </div>
                                         <div class="row my-4">
@@ -120,8 +125,8 @@
                                             </div>
                                             <div class="col-6">
                                                 <h5 id="body" class="mb-3"><a class="links"
-                                                        href="https://ig.me/m/_im_dimpl/"
-                                                        target="_blank">Message on Instagram</a></h5>
+                                                        href="https://ig.me/m/_im_dimpl/" target="_blank">Message on
+                                                        Instagram</a></h5>
                                             </div>
                                         </div>
                                     </div>
@@ -129,22 +134,20 @@
                             </div>
                             <div id="footer" class="card-footer">
                                 <div class="row">
-                                  <div class="col">
-                                      <div class="text-center m-3 my-md-4">
-                                      <a href="https://alvo.chat/HHG"
-                                        target="_blank"><span class="badge"><img src="whatsapp.png" width="60px"
-                                                alt=""></span></a>
-                                      </div>
-                                  </div>
-                                  <div class="col">
-                                      <div class="text-center m-3 my-md-4">
-                                      <a href="https://msng.link/o/?Customer29=tg"
-                                        target="_blank"><span class="badge"><img src="tele.png" width="60px"
-                                                alt=""></span></a>
-                                      </div>
-                                  </div>
+                                    <div class="col">
+                                        <div class="text-center m-3 my-md-4">
+                                            <a href="https://alvo.chat/HHG" target="_blank"><span class="badge"><img
+                                                        src="whatsapp.png" width="60px" alt=""></span></a>
+                                        </div>
+                                    </div>
+                                    <div class="col">
+                                        <div class="text-center m-3 my-md-4">
+                                            <a href="https://msng.link/o/?Customer29=tg" target="_blank"><span
+                                                    class="badge"><img src="tele.png" width="60px" alt=""></span></a>
+                                        </div>
+                                    </div>
                                 </div>
-                                
+
                             </div>
                         </div>
                     </div>
@@ -166,11 +169,13 @@
                                 </a>
                             </div>
                         </div>
-                        <div class="col-md-6">
-                            <div class="col-12 myProjects my-2 py-4 mr-md-1 rounded text-center shadow">
-                                <h5 class="text-primary">SGPA Calculator</h5>
+                        <div id="prependHere" class="col-md-6">
+                            <div id="sgpa" class="col-12 myProjects my-2 py-4 mr-md-1 rounded text-center shadow">
+                                <h5 id="alert-text" class="text-primary">SGPA Calculator</h5>
+                                <button id="alerts1" class="btn btn-primary">Launch Project</button>
+                                <button id="alerts2" class="d-none btn btn-danger">Close</button>
                                 <a href="https://dimpal001.github.io/calculate_sgpa/" target="_blank">
-                                    <button class="btn btn-primary">Launch Project</button>
+
                                 </a>
                             </div>
                         </div>
@@ -205,6 +210,9 @@
             </div>
         </div>
     </div>
+    <script src="bootstrap.js"></script>
+    <script src="jQuery.js"></script>
+    <script src="formula.js"></script>
 </body>
 
 </html>
