--- a/index.html
+++ b/index.html
@@ -188,9 +188,9 @@
                             </div>
                         </div>
                         <div class="col-md-6">
-                            <div class="col-12 my-2 myProjects py-4 text-center rounded shadow">
-                                <h5 class="text-primary">My Profile</h5>
-                                <button class="btn disabled btn-primary">Launch Project</button>
+                            <div id="main" class="col-12 my-2 myProjects py-4 text-center rounded shadow">
+                                <h5 id="myProfile" class="text-primary">My Profile</h5>
+                                <button id="btn" class="btn btn-primary">Launch Project</button>
                             </div>
                         </div>
                     </div>
