adding some animation

--- a/index.html
+++ b/index.html
@@ -187,10 +187,11 @@
                                 </a>
                             </div>
                         </div>
-                        <div class="col-md-6">
-                            <div id="main" class="col-12 my-2 myProjects py-4 text-center rounded shadow">
+                        <div id="main" class="col-md-6">
+                            <div class="col-12 my-2 myProjects py-4 text-center rounded shadow">
                                 <h5 id="myProfile" class="text-primary">My Profile</h5>
                                 <button id="btn" class="btn btn-primary">Launch Project</button>
+                                <button id="btn2" class="btn d-none btn-primary">OK</button>
                             </div>
                         </div>
                     </div>
