--- a/index.html
+++ b/index.html
@@ -11,7 +11,29 @@
 </head>
 
 <body>
-    <div class="container-fluid">
+    <div id="loader" class="loader_bg container-fluid">
+        <div class="loader mt-5 container d-flex align-items-center justify-content-center">
+            <div class="row mt-5">
+                <div class="col mt-5">
+                    <div class="mt-5">
+                        <div class="mt-5">
+                            <div class="row">
+                                <div class="col-12 text-center me-5">
+                                    <div id="load1" class="mt-5 me-0 spinner-border m-1 text-white"></div>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-12 text-center me-5">
+                                    <div id="load1" class="mt-5 m-1 text-white">Loading...</div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div id="loader2" class="container-fluid">
         <div id="home" class="container-fluid">
             <div id="logo" class="mt-2 row">
                 <div class="col">
@@ -26,7 +48,7 @@
             </div>
             <div class="row rounded mb-2">
                 <div id="testimonial" class="col shadow mt-5">
-                    <figure id="imgs" class="text-center"><img src="dimpl.png" width="200px" alt=""></figure>
+                    <figure class="text-center"><img id="imgs" src="dimpl.png" width="200px" alt=""></figure>
                     <div class="text-white myname">
                         <h1 class="text-center mt-n-3">Hello, I'm Dimpal Das</h1>
                         <p id="lead" class="px-md-5 mx-md-5 lead text-center">I'm a positive, enthusiastic and competent
