adding like feature

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="bootstrap.css">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://kit.fontawesome.com/8c160852e6.css" crossorigin="anonymous">
     <title>Dimpal</title>
 </head>
 
@@ -221,13 +222,19 @@
                         <div class="col m-3 my-md-4">
                             <a href="#home" id="contact-me-btn" class="btn px-4 rounded-pill"> HOME </a>
                         </div>
+                        <div id="like-me" class="col m-3 my-md-4">
+                            <button id="contact-me-btn" class="btn like-me px-3 rounded-pill">LIKE ME</button>
+                        </div>
                     </div>
                 </div>
             </div>
             <div class="row border mb-2 rounded-bottom shadow-bottom shadow-start shadow-end">
                 <div class="col py-4">
-                    <h5 class="text-center text-primary">
+                    <h5 id="thanks" class="text-center text-primary">
                         Thank you for visit my website
+                    </h5>
+                    <h5 id="thanks-text" class="text-center">
+                        Thank you for your valuable like.
                     </h5>
                 </div>
             </div>
