--- a/index.html
+++ b/index.html
@@ -217,6 +217,14 @@
                                 <button id="btn2" class="btn d-none btn-primary">OK</button>
                             </div>
                         </div>
+                        <div class="col-md-6">
+                            <div class="col-12 my-2 myProjects py-4 text-center rounded shadow">
+                                <h5 class="text-primary">Registration Form</h5>
+                                <a href="https://dimpal001.github.io/registration/" target="_blank">
+                                    <button class="btn btn-primary">Launch Project</button>
+                                </a>
+                            </div>
+                        </div>
                     </div>
                     <div class="row text-center">
                         <div class="col m-3 my-md-4">
